[tool.poetry]
name = "skin-vision"
version = "0.1.0"
description = "Melanoma detection"
authors = ["morten.aslesen <mortendaehli@gmail.com>"]
license = "GNUv3"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "^2.7.0"
pandas = "^1.3.5"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
keras = "^2.7.0"
typer = "^0.4.0"
tqdm = "^4.62.3"
opencv-python = "^4.5.4"
pydantic = "^1.8.2"
scipy = "^1.7.3"
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
